working implementation of mock demo

--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "homepage": "https://github.com/apollostack/mock-demo#readme",
   "dependencies": {
+    "casual-browserify": "^1.5.2",
     "graphiql": "^0.6.5",
-    "graphql-tools": "^0.1.0",
+    "graphql-tools": "^0.2.0",
     "html-webpack-plugin": "^2.14.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
