--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-import": "^1.2.0",
     "eslint-plugin-react": "^4.2.3",
+    "json-loader": "^0.5.4",
     "postcss-loader": "^0.8.1",
     "react-transform-hmr": "^1.0.2",
     "style-loader": "^0.13.0",
